--- a/index.html
+++ b/index.html
@@ -6,101 +6,101 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-body {
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #ff9acb, #ffc1dd);
-  padding: 20px;
-}
+  body {
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #ff9acb, #ffc1dd);
+    padding: 20px;
+  }
 
-.box {
-  max-width: 650px;
-  background: #ffffff;
-  margin: auto;
-  border-radius: 16px;
-  overflow: hidden;
-  box-shadow: 0 12px 30px rgba(0,0,0,.18);
-}
+  .box {
+    max-width: 650px;
+    background: #ffffff;
+    margin: auto;
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0 12px 30px rgba(0,0,0,.18);
+  }
 
-.header {
-  display: flex;
-  align-items: center;
-  padding: 16px;
-  background: #ffe3f0;
-}
+  .header {
+    display: flex;
+    align-items: center;
+    padding: 16px;
+    background: #ffe3f0;
+  }
 
-.header .logo {
-  width: 70px;
-  margin-right: 16px;
-}
+  .header .logo {
+    width: 70px;
+    margin-right: 16px;
+  }
 
-.header .banner {
-  width: 100%;
-  max-height: 90px;
-  object-fit: contain;
-}
+  .header .banner {
+    width: 100%;
+    max-height: 90px;
+    object-fit: contain;
+  }
 
-.content { padding: 22px; }
+  .content { padding: 22px; }
 
-h2 {
-  text-align: center;
-  color: #e91e63;
-  margin-bottom: 22px;
-}
+  h2 {
+    text-align: center;
+    color: #e91e63;
+    margin-bottom: 22px;
+  }
 
-label {
-  font-weight: bold;
-  margin-top: 14px;
-  display: block;
-}
+  label {
+    font-weight: bold;
+    margin-top: 14px;
+    display: block;
+  }
 
-input, select, textarea {
-  width: 100%;
-  padding: 11px;
-  margin-top: 6px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  font-size: 14px;
-}
+  input, select, textarea {
+    width: 100%;
+    padding: 11px;
+    margin-top: 6px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+  }
 
-textarea { resize: vertical; }
+  textarea { resize: vertical; }
 
-.desc {
-  font-size: 13px;
-  background: #fff0f7;
-  padding: 14px;
-  border-radius: 8px;
-  margin-top: 10px;
-  line-height: 1.6;
-}
+  .desc {
+    font-size: 13px;
+    background: #fff0f7;
+    padding: 14px;
+    border-radius: 8px;
+    margin-top: 10px;
+    line-height: 1.6;
+  }
 
-button {
-  width: 100%;
-  background: #e91e63;
-  color: #fff;
-  border: none;
-  padding: 15px;
-  margin-top: 26px;
-  font-size: 16px;
-  border-radius: 10px;
-  cursor: pointer;
-}
+  button {
+    width: 100%;
+    background: #e91e63;
+    color: #fff;
+    border: none;
+    padding: 15px;
+    margin-top: 26px;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+  }
 
-button:hover { background: #d81b60; }
+  button:hover { background: #d81b60; }
 
-.hidden { display: none; }
+  .hidden { display: none; }
 
-.loading {
-  position: fixed;
-  inset: 0;
-  background: rgba(255,255,255,.85);
-  display: none;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  font-weight: bold;
-  color: #e91e63;
-  z-index: 999;
-}
+  .loading {
+    position: fixed;
+    inset: 0;
+    background: rgba(255,255,255,.85);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: #e91e63;
+    z-index: 999;
+  }
 </style>
 </head>
 <body>
@@ -119,9 +119,8 @@ button:hover { background: #d81b60; }
   <div class="content">
     <h2>Isi Formulir Pendaftaran</h2>
 
-    <form method="POST" 
-      action="https://script.google.com/macros/s/AKfycbznMdEy1G-1ZrN8U5gXDG4kg0NbFycZ1-sAYvWqb_5oLw4nolnvrYk-14HBQouEGkbuYA/exec"
-      onsubmit="showLoading()">
+    <!-- IMPORTANT: no action / method here, we use fetch() -->
+    <form id="regForm" autocomplete="on" novalidate>
 
       <label>Nama Lengkap</label>
       <input type="text" name="nama" required>
@@ -158,7 +157,6 @@ button:hover { background: #d81b60; }
           <li>Sampel produk gratis untuk review</li>
           <li>Membangun personal branding sebagai KOL</li>
         </ul>
-        <b>@Suryafluencers</b> bukan hanya tentang review, tapi kolaborasi jangka panjang & pertumbuhan creator.
       </div>
 
       <select name="suryaflu" id="suryaflu" required>
@@ -180,31 +178,77 @@ button:hover { background: #d81b60; }
   </div>
 </div>
 
+<!-- SCRIPTS: show/hide then fetch submit -->
 <script>
-function showLoading() {
-  document.getElementById('loading').style.display = 'flex';
-}
+  // show/hide Creator fields
+  (function(){
+    const suryaflu = document.getElementById('suryaflu');
+    const creatorForm = document.getElementById('creatorForm');
+    const ig = document.getElementById('ig');
+    const tt = document.getElementById('tt');
 
-const suryaflu = document.getElementById('suryaflu');
-const creatorForm = document.getElementById('creatorForm');
-const ig = document.getElementById('ig');
-const tt = document.getElementById('tt');
+    suryaflu.addEventListener('change', function () {
+      if (this.value === 'Ya') {
+        creatorForm.classList.remove('hidden');
+        ig.required = true;
+        tt.required = true;
+      } else {
+        creatorForm.classList.add('hidden');
+        ig.required = false;
+        tt.required = false;
+        ig.value = '';
+        tt.value = '';
+      }
+    });
+  })();
 
-suryaflu.addEventListener('change', function () {
-  if (this.value === 'Ya') {
-    creatorForm.classList.remove('hidden');
-    ig.required = true;
-    tt.required = true;
-  } else {
-    creatorForm.classList.add('hidden');
-    ig.required = false;
-    tt.required = false;
-    ig.value = '';
-    tt.value = '';
-  }
-});
+  // submit via fetch (replace WEB_APP_EXEC_URL_HERE)
+  (function(){
+    const form = document.getElementById('regForm');
+    const loading = document.getElementById('loading');
+
+    // Put your latest Apps Script /exec URL here:
+    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbznMdEy1G-1ZrN8U5gXDG4kg0NbFycZ1-sAYvWqb_5oLw4nolnvrYk-14HBQouEGkbuYA/exec";
+
+    // Put your success page URL here:
+    const SUCCESS_URL = "https://awilistrators.github.io/Form-YES-Surtok2025/success.html";
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      loading.style.display = 'flex';
+
+      // basic front validation: check valid WA pattern
+      const wa = form.elements['wa'].value || '';
+      const waPattern = /^08[0-9]{8,11}$/;
+      if (!waPattern.test(wa)) {
+        alert('Nomor WhatsApp tidak valid. Pastikan dimulai dengan 08 dan panjang sesuai.');
+        loading.style.display = 'none';
+        return;
+      }
+
+      const fd = new FormData(form);
+
+      fetch(WEBAPP_URL, {
+        method: 'POST',
+        body: fd
+      })
+      .then(response => response.text())
+      .then(text => {
+        // expect 'OK' from Apps Script
+        if (text && text.trim().toUpperCase() === 'OK') {
+          window.location.href = SUCCESS_URL;
+        } else {
+          throw new Error(text || 'Response Tidak OK');
+        }
+      })
+      .catch(err => {
+        console.error('Submit error:', err);
+        alert('Gagal mengirim data. Silakan coba lagi.');
+        loading.style.display = 'none';
+      });
+    });
+  })();
 </script>
 
 </body>
 </html>
-
