--- a/index.html
+++ b/index.html
@@ -6,121 +6,100 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #ff9acb, #ffc1dd);
-    padding: 20px;
-  }
-
-  .box {
-    max-width: 650px;
-    background: #ffffff;
-    margin: auto;
-    border-radius: 16px;
-    overflow: hidden;
-    box-shadow: 0 12px 30px rgba(0,0,0,.18);
-  }
-
-  .header {
-    display: flex;
-    align-items: center;
-    padding: 16px;
-    background: #ffe3f0;
-  }
-
-  .header .logo {
-    width: 70px;
-    margin-right: 16px;
-  }
-
-  .header .banner {
-    width: 100%;
-    max-height: 90px;
-    object-fit: contain;
-  }
-
-  .content { padding: 22px; }
-
-  h2 {
-    text-align: center;
-    color: #e91e63;
-    margin-bottom: 22px;
-  }
-
-  label {
-    font-weight: bold;
-    margin-top: 14px;
-    display: block;
-  }
-
-  input, select, textarea {
-    width: 100%;
-    padding: 11px;
-    margin-top: 6px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 14px;
-  }
-
-  textarea { resize: vertical; }
-
-  .desc {
-    font-size: 13px;
-    background: #fff0f7;
-    padding: 14px;
-    border-radius: 8px;
-    margin-top: 10px;
-    line-height: 1.6;
-  }
-
-  button {
-    width: 100%;
-    background: #e91e63;
-    color: #fff;
-    border: none;
-    padding: 15px;
-    margin-top: 26px;
-    font-size: 16px;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-
-  button:hover { background: #d81b60; }
-
-  .hidden { display: none; }
-
-  .loading {
-    position: fixed;
-    inset: 0;
-    background: rgba(255,255,255,.85);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    font-weight: bold;
-    color: #e91e63;
-    z-index: 999;
-  }
+body {
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #ff9acb, #ffc1dd);
+  padding: 20px;
+}
+.box {
+  max-width: 650px;
+  background: #fff;
+  margin: auto;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 12px 30px rgba(0,0,0,.18);
+}
+.header {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  background: #ffe3f0;
+}
+.header .logo {
+  width: 70px;
+  margin-right: 16px;
+}
+.header .banner {
+  width: 100%;
+  max-height: 90px;
+  object-fit: contain;
+}
+.content { padding: 22px; }
+h2 {
+  text-align: center;
+  color: #e91e63;
+  margin-bottom: 22px;
+}
+label {
+  font-weight: bold;
+  margin-top: 14px;
+  display: block;
+}
+input, select, textarea {
+  width: 100%;
+  padding: 11px;
+  margin-top: 6px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+.desc {
+  font-size: 13px;
+  background: #fff0f7;
+  padding: 14px;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+button {
+  width: 100%;
+  background: #e91e63;
+  color: #fff;
+  border: none;
+  padding: 15px;
+  margin-top: 26px;
+  font-size: 16px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.hidden { display: none; }
+.loading {
+  position: fixed;
+  inset: 0;
+  background: rgba(255,255,255,.85);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: #e91e63;
+  z-index: 999;
+}
 </style>
 </head>
+
 <body>
 
 <div class="loading" id="loading">⏳ Mengirim data...</div>
 
 <div class="box">
-
-  <!-- HEADER -->
   <div class="header">
-    <img src="logo-suryatokoku.png" class="logo" alt="Logo">
-    <img src="header-event.png" class="banner" alt="Header Event">
+    <img src="logo-suryatokoku.png" class="logo">
+    <img src="header-event.png" class="banner">
   </div>
 
-  <!-- CONTENT -->
   <div class="content">
     <h2>Isi Formulir Pendaftaran</h2>
 
-    <!-- IMPORTANT: no action / method here, we use fetch() -->
-    <form id="regForm" autocomplete="on" novalidate>
+    <form id="regForm">
 
       <label>Nama Lengkap</label>
       <input type="text" name="nama" required>
@@ -136,7 +115,7 @@
       <input type="date" name="tgl_lahir" required>
 
       <label>Nomor WhatsApp</label>
-      <input type="tel" name="wa" required pattern="^08[0-9]{8,11}$" placeholder="08xxxxxxxxxx">
+      <input type="tel" name="wa" required>
 
       <label>Email</label>
       <input type="email" name="email" required>
@@ -144,21 +123,7 @@
       <label>Alamat Lengkap</label>
       <textarea name="alamat" required></textarea>
 
-      <label>Apakah kamu ingin bergabung ke komunitas @Suryafluencers?</label>
-
-      <div class="desc">
-        <b>@Suryafluencers</b> adalah program Creator & Reviewer Suryatokoku bagi Content Creator yang ingin berkolaborasi melalui pembuatan konten, event/campaign, dan review produk.
-        <br><br>
-        <b>Keuntungan:</b>
-        <ul>
-          <li>Akses early info event & campaign</li>
-          <li>Extra Point Member Suryatokoku</li>
-          <li>Special Goodie Bag</li>
-          <li>Sampel produk gratis untuk review</li>
-          <li>Membangun personal branding sebagai KOL</li>
-        </ul>
-      </div>
-
+      <label>Bergabung ke @Suryafluencers?</label>
       <select name="suryaflu" id="suryaflu" required>
         <option value="">-- Pilih --</option>
         <option value="Ya">Ya, Mau Bergabung</option>
@@ -178,76 +143,42 @@
   </div>
 </div>
 
-<!-- SCRIPTS: show/hide then fetch submit -->
 <script>
-  // show/hide Creator fields
-  (function(){
-    const suryaflu = document.getElementById('suryaflu');
-    const creatorForm = document.getElementById('creatorForm');
-    const ig = document.getElementById('ig');
-    const tt = document.getElementById('tt');
+const form = document.getElementById("regForm");
+const loading = document.getElementById("loading");
 
-    suryaflu.addEventListener('change', function () {
-      if (this.value === 'Ya') {
-        creatorForm.classList.remove('hidden');
-        ig.required = true;
-        tt.required = true;
-      } else {
-        creatorForm.classList.add('hidden');
-        ig.required = false;
-        tt.required = false;
-        ig.value = '';
-        tt.value = '';
-      }
-    });
-  })();
+const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbznMdEy1G-1ZrN8U5gXDG4kg0NbFycZ1-sAYvWqb_5oLw4nolnvrYk-14HBQouEGkbuYA/exec";
+const SUCCESS_URL = "https://awilistrators.github.io/Form-YES-Surtok2025/success.html";
 
-  // submit via fetch (replace WEB_APP_EXEC_URL_HERE)
-  (function(){
-    const form = document.getElementById('regForm');
-    const loading = document.getElementById('loading');
+form.addEventListener("submit", function(e) {
+  e.preventDefault();
+  loading.style.display = "flex";
 
-    // Put your latest Apps Script /exec URL here:
-    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbznMdEy1G-1ZrN8U5gXDG4kg0NbFycZ1-sAYvWqb_5oLw4nolnvrYk-14HBQouEGkbuYA/exec";
+  fetch(WEBAPP_URL, {
+    method: "POST",
+    body: new FormData(form)
+  })
+  .then(r => r.text())
+  .then(t => {
+    if (t.trim() === "OK") {
+      window.location.href = SUCCESS_URL;
+    } else {
+      throw t;
+    }
+  })
+  .catch(err => {
+    alert("Gagal mengirim data");
+    loading.style.display = "none";
+    console.error(err);
+  });
+});
 
-    // Put your success page URL here:
-    const SUCCESS_URL = "https://awilistrators.github.io/Form-YES-Surtok2025/success.html";
+const suryaflu = document.getElementById("suryaflu");
+const creatorForm = document.getElementById("creatorForm");
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      loading.style.display = 'flex';
-
-      // basic front validation: check valid WA pattern
-      const wa = form.elements['wa'].value || '';
-      const waPattern = /^08[0-9]{8,11}$/;
-      if (!waPattern.test(wa)) {
-        alert('Nomor WhatsApp tidak valid. Pastikan dimulai dengan 08 dan panjang sesuai.');
-        loading.style.display = 'none';
-        return;
-      }
-
-      const fd = new FormData(form);
-
-      fetch(WEBAPP_URL, {
-        method: 'POST',
-        body: fd
-      })
-      .then(response => response.text())
-      .then(text => {
-        // expect 'OK' from Apps Script
-        if (text && text.trim().toUpperCase() === 'OK') {
-          window.location.href = SUCCESS_URL;
-        } else {
-          throw new Error(text || 'Response Tidak OK');
-        }
-      })
-      .catch(err => {
-        console.error('Submit error:', err);
-        alert('Gagal mengirim data. Silakan coba lagi.');
-        loading.style.display = 'none';
-      });
-    });
-  })();
+suryaflu.addEventListener("change", () => {
+  creatorForm.classList.toggle("hidden", suryaflu.value !== "Ya");
+});
 </script>
 
 </body>
