--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ button:hover { background: #d81b60; }
 
   <!-- CONTENT -->
   <div class="content">
-    <h2>Isi Formulir Pendaftaran</h2>
+    <h2>Formulir Pendaftaran</h2>
 
     <form method="POST" 
       action="https://script.google.com/macros/s/AKfycbznMdEy1G-1ZrN8U5gXDG4kg0NbFycZ1-sAYvWqb_5oLw4nolnvrYk-14HBQouEGkbuYA/exec"
@@ -205,6 +205,7 @@ suryaflu.addEventListener('change', function () {
 
 </body>
 </html>
+
 
 
 
